# Ergonomic-Comic-Translator

./: .gitignore  LICENSE  README.md  README.zh.md  context.txt  index.html  package.json  pyproject.toml  tsconfig.frontend.json  tsconfig.json  vite.config.ts
docs/: api-reference.md  api-reference.zh.md  architecture.drawio  architecture.md  architecture.zh.md  cli-commands.md  cli-commands.zh.md  frontend-components.md  frontend-components.zh.md  python-layer.md  python-layer.zh.md  setup.md  setup.zh.md
src/: config.ts  logger.ts  main.ts
src/api/: index.ts  router.ts  server.ts
src/api/config/: index.ts
src/api/interfaces/: api-config-response.ts  context-job-record.ts  context-queue-status-response.ts  index.ts  job-status.ts  ocr-job-record.ts  ocr-job-result-response.ts  ocr-queue-status-response.ts  polish-job-record.ts  polish-queue-status-response.ts  textless-job-record.ts  textless-queue-status-response.ts  translation-job-record.ts  translation-output.ts  translation-queue-status-response.ts  upload-batch-result.ts  upload-record.ts  upload-skip-item.ts
src/api/repositories/: context-job-repository.ts  index.ts  (+12 more)
src/frontend/: App.tsx  config.ts  main.tsx
src/ocr/: execution.ts  index.ts  merge.ts  preparation.ts  run-ocr.ts  runtime-context.ts
src/scripts/: amd-detect.ts  cli-utils.ts  context.ts  cuda-detect.ts  delete.ts  doctor.ts  memory-bootstrap.ts  nvidia-detect.ts  python-bootstrap.ts  python-detect.ts  python-run.ts  shell-utils.ts  system-bootstrap.ts  system-detect.ts  text-cleaner-bootstrap.ts  textless.ts  translate.ts
(+138 files in other folders)
